--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 :root {
     --main-bg-color: #CE7320;
+    --box-bg-color: #EA8E38;
 }
 
 main {
@@ -73,18 +74,23 @@ header {
 /* HOME PAGE */
 
 .add_image {
-    width: 50%;
+    max-width: 100%;
     border-radius: 10px;
-    padding: 0px 20px;
 }
 
 .container {
     display: grid;
     grid-template-columns: auto 1fr;
-    padding: 5px 20px;
+    background-color: var(--box-bg-color);
     box-shadow: 2px 2px 2px 2px;
+    border-radius: 10px;
     align-items: center;
-    margin: 5px 50px;
+    margin: 10px 50px;
+}
+
+.container div {
+    padding: 10px;
+    
 }
 
 .cta {
@@ -92,7 +98,9 @@ header {
     font-size: 1.5em;
     font-family: "Exo";
     text-transform: uppercase;
-    margin: 20px auto;
+    display: flex;
+    margin: 15px auto;
+    background: var(--box-bg-color)
 }
 
 h2 {
@@ -109,14 +117,6 @@ h3 {
     text-align: center;
 }
 
-.news_image1 {
-    width: 100%;
-}
-
-.news_image2 {
-    width: 50%;
-}
-
 .news_heading {
     background-color: #d9d9d9 ;
     text-align: center;
@@ -128,6 +128,10 @@ h3 {
 .news {
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+.news_image {
+    width: 100%;
 }
 
 .wrap {
