--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
     --box-bg-color: #EA8E38;
     --button-book-color: #54504C;
     --background-text-color: #FFFFFF;
+    --background-color-news: #F9AC55;
+    --background-div-color: #C59161;
+    --background-contact-page: #FABF7C;
+    --background-address: #AB5A0E;
 }
 
 main {
@@ -38,7 +42,7 @@ nav {
     display: none;
     font-family: "Exo";
     text-transform: uppercase;
-    background-color: var(--main-bg-color);
+    background-color: var(--background-div-color);
     position: relative;
     margin: auto;
     right: 10px;
@@ -202,9 +206,96 @@ p {
 /* NEWS PAGE */
 
 .news_page_background {
-    background-image: url("../images/metalweb.jpg");
+    background-image: url("../images/metalweb1.jpg");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
 }
 
 .news_page_nightinthemuseum {
-    background-image: url("../images/nightinthemuseum1.jpg")
+    background-image: url("../images/nightinthemuseum1.jpg");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.news_events {
+    font-family: "Exo";
+    font-size: 2em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.heading_news {
+    background-color: var(--background-color-news);
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.access {
+    background-color: var(--background-div-color);
+}
+
+/* CONTACT PAGE */
+
+.contact_heading {
+    font-family: "Exo";
+    font-size: 2em;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    color: var(--background-text-color);
+}
+
+.contact_page p {
+    font-size: 1.2em;
+}
+
+.background_image_2 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    margin: 10px auto;
+}
+
+.divided {
+    background-color: var(--background-contact-page);
+}
+
+.divided p {
+    font-size: 1.2em;
+}
+
+.left_side {
+    padding: 10px;
+    justify-content: left;
+    text-align: left;
+}
+
+.left_side h2 {
+    margin: 20px;
+    font-size: 2em;
+}
+
+.right_side h2 {
+    margin-bottom: 20px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: right;
+    text-align: right;
+    font-size: 2em;
+}
+
+.colored_contact {
+    background-color: var(--background-address);
+}
+
+/* ABOUT PAGE */
+
+.about p {
+    font-size: 1.2em;
 }
