--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ main {
     text-decoration: underline;
 }
 
+
 /* Navigation menu */
 
 #hamburger_menu {
@@ -46,6 +47,7 @@ nav {
     position: relative;
     margin: auto;
     right: 10px;
+    
 }
 
 nav ul {
@@ -61,6 +63,7 @@ nav ul li a {
     text-decoration: none;
     color: #000;
 }
+
 
 #hamburger_menu:checked ~ nav {
     display: block;
@@ -489,6 +492,11 @@ footer a {
     display: none;
   }
 
+  .museum {
+    width: 100%;
+    height: 500px;
+  }
+
   nav {
     display: block;
     text-align: center;
@@ -505,6 +513,7 @@ footer a {
     display: flex;
     justify-content: stretch;
     justify-self: center;
+    width: 100%;
   }
 
   nav ul li {
@@ -563,6 +572,7 @@ footer a {
   .background_line h1 {
     font-size: 3.3em;
   }
+
 
   /* NEWS PAGE */
 
@@ -656,4 +666,30 @@ footer a {
   .get_involved div {
     padding: 10px;
   }
+
+  /* ABOUT PAGE */
+
+  .purple {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: auto;
+    justify-content: center;
+  }
+
+  .purple img {
+    justify-items: center;
+    margin: 20px auto;
+
+  }
+
+  .purple p {
+    margin: 20px;
+    justify-self: center;
+  }
+
+  .center {
+    justify-content: center;
+    margin: auto;
+  }
+
 }
