--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ header {
     padding: 5px 10px;
 }
 
+header i {
+  font-size: 2em;
+}
+
 .hamburger_menu {
     align-self: center;
 }
@@ -221,28 +225,15 @@ p {
 /* NEWS PAGE */
 
 .news_page_background {
-    background-image: url("../images/metalweb1.jpg");
-    background-repeat: no-repeat;
-    max-width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
+    padding: 5px;
 }
 
-.news_page_nightinthemuseum {
-    background-image: url("../images/nightinthemuseum1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    width: 100%;
-}
 
 .news_events {
     font-family: "Exo";
     font-size: 2em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: #000;
 }
 
 .heading_news {
@@ -449,15 +440,24 @@ footer i {
 
 #email {
     height:25px;
-    width: 80%;
+    width: 75%;
 }
 
 footer i {
     font-size: 3em;
+    padding: 10px;
+}
+
+footer i:hover {
+    font-size: 5em;
 }
 
 footer a {
     text-decoration: none;
+}
+
+footer label {
+    font-family: "Alegreya Sans";
 }
 
 /* Get Involved Page */
@@ -494,7 +494,6 @@ footer a {
 
   .museum {
     width: 100%;
-    height: 500px;
   }
 
   nav {
@@ -536,7 +535,7 @@ footer a {
   }
 
   .news {
-    display: flex;
+    display: grid;
     justify-content: center;
     width: 80%;
     margin: auto;
