--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,19 @@
     --background-contact-page: #FABF7C;
     --background-address: #AB5A0E;
     --background-footer: #D8781F;
+    --black: #000000;
+}
+
+body {
+  max-width: 100%;
 }
 
 main {
     background-color: var(--main-bg-color);
+    padding: 0px;
+    margin: 0px;
+    padding-top: 90px;
+    
 }
 
 .active {
@@ -80,9 +89,13 @@ nav ul li a {
 }
 
 header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     padding: 5px 10px;
+    position: fixed;
+    background-color: rgb(255, 255, 255, 0.8);
+    width: 100%;
 }
 
 header i {
@@ -108,6 +121,7 @@ header i {
   background-repeat: no-repeat;
   padding: 200px;
   background-size: cover;
+  background-position: center center;
 }
 
 .add_image {
@@ -348,6 +362,15 @@ p {
     text-align: center;
 }
 
+.book {
+  background-color: var(--box-bg-color);
+  padding: 5px;
+  font-size: 0.7em;
+  border-radius: 5px;
+  border-color: var(--black);
+  border-style: initial;
+}
+
 .continue {
     background-color: var(--background-address);
     margin: 20px auto;
@@ -415,6 +438,11 @@ p {
 }
 
 /* FOOTER */
+
+footer {
+  padding: 0px;
+  margin: 0px;
+}
 
 footer section {
     background-color: var(--background-address);
@@ -506,15 +534,18 @@ footer label {
     background-color: var(--background-text-color);
 }
 
-@media (min-width: 600px) and (max-width: 799px) {
+@media (min-width: 600px) and (max-width: 999px) {
 
   header {
     display: flex;
-    justify-content: space-evenly;
     margin: 0px;
     padding: 0px;
     max-width: 100%;
 
+  }
+
+  main {
+    padding-top: 80px;
   }
 
   .hamburger_menu {
@@ -540,7 +571,7 @@ footer label {
 
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
 
 /* HOME PAGE */
 
@@ -549,6 +580,12 @@ footer label {
     display: grid;
     grid-template-columns: 1fr auto;
     position: relative;
+    padding: 0px;
+    align-items: center;
+  }
+
+  main {
+    padding-top: 0px;
   }
 
   .hamburger_menu {
@@ -558,6 +595,7 @@ footer label {
   .home_background {
     padding: 450px;
   }
+
   nav {
     display: flex;
     text-align: center;
@@ -565,7 +603,6 @@ footer label {
     align-self:  center;
     background: none;
     white-space: nowrap;
-    position: absolute;
     padding: 10px;
     margin: auto;
     right: 0px;
@@ -577,6 +614,7 @@ footer label {
     justify-content: stretch;
     justify-self: center;
     width: 100%;
+    position: relative;
   }
 
   nav ul li {
@@ -585,7 +623,6 @@ footer label {
   }
 
     nav a:hover {
-      
       text-decoration: none;
       background-color: var(--background-address);
       padding: 15px;
