--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     padding: 0px 10px;
-    margin: 0px auto;
+    margin: 0px ;
     position: fixed;
     background-color: rgb(255, 255, 255, 0.8);
     width: 100%;
