--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 10px;
+    padding: 0px;
     margin: 0px ;
     position: fixed;
     background-color: rgb(255, 255, 255, 0.8);
@@ -137,6 +137,7 @@ header i {
   background-size: cover;
   background-position: center center;
   width: 100%;
+  margin: 0px;
 }
 
 .add_image {
