--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px;
+    padding: 0px 10px;
     margin: 0px ;
     position: fixed;
     background-color: rgb(255, 255, 255, 0.8);
