--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     padding: 0px 10px;
-    margin: 0px ;
+    margin: 0px auto;
     position: fixed;
     background-color: rgb(255, 255, 255, 0.8);
     width: 100%;
@@ -136,7 +136,6 @@ header i {
   padding: 200px;
   background-size: cover;
   background-position: center center;
-  width: 100%;
   margin: 0px;
 }
 
