--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ header i {
   background-image: url(../images/museum-3.jpg);
   background-repeat: no-repeat;
   padding: 200px;
-  width: 100%;
+  background-size: cover;
   background-position: center center;
   margin: 0px;
 }
