--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ header i {
   background-size: cover;
   background-position: center center;
   margin: 0px;
+  object-fit: cover;
 }
 
 .add_image {
