--- a/css/style.css
+++ b/css/style.css
@@ -880,6 +880,11 @@ footer label {
 
   }
 
+  .access {
+    display: flex;
+    flex-direction: row;
+  }
+
     .about section {
       display: flex;
       flex-direction: row;
